# Car-Dealership-Inventory-System

./: .gitignore  CONTRIBUTING.md  PROMPTS.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  vehicles.py
backend/app/services/: __init__.py  vehicle_service.py
backend/migrations/: alembic.ini  env.py  script.py.mako
backend/migrations/versions/: 001_initial_schema.py
backend/tests/: conftest.py  test_auth.py  test_models.py  test_vehicle_search.py  test_vehicle_service.py  test_vehicles.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/components/: AdminRoute.jsx  Header.jsx  LoadingSpinner.jsx  ProtectedRoute.jsx
frontend/src/pages/: AdminPage.jsx  DashboardPage.jsx  LoginPage.jsx  RegisterPage.jsx
frontend/src/services/: api.js  auth.js  vehicle.js
frontend/src/utils/: token.js  tokenManager.js
